--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,158 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Copy and paste your work from yesterday here and start to refactor into flexbox */
+body{
+	max-width: 876px;
+	margin: auto;
+	margin-top: 2%;
+}
+#stickynav {
+	background-color: white;
+	width: 876px;
+	position: fixed;
+	display: flex;
+	justify-content: space-between;
+}
+ul{
+	display: flex;
+	width: 70%;
+	justify-content: space-around;
+	align-items: center;
+}
+ul a, ul a:visited {
+	color: lightgray;
+	text-decoration: none;
+	text-align: center;
+}
+ul a:hover {
+	color: black;
+}
+ul a:active {
+	color: teal;
+}
+
+header {
+	padding: 25px 0;
+	padding-top: 80px;
+	display: flex;
+	justify-content: space-evenly;
+}
+#left-header {
+	float: left;
+	margin: 50px 70px;
+}
+h1{
+	text-align: center;
+	font-size: 72px;
+}
+#get-started-button, #get-started-button:visited{
+	display: block;
+	text-align: center;
+	text-decoration: none;
+	color: black;
+	border: 1px solid;
+	width: 150px;
+	height: 30px;
+	line-height: 27px;
+	margin: auto;
+}
+#get-started-button:hover {
+	background-color: black;
+	color:white;
+}
+#get-started-button:active {
+	background-color: grey;
+}
+.lower-section{
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+	padding: 20px 0;
+}
+.top-paragraphs {
+	display: flex;
+	justify-content: space-between;
+}
+.middle-img {
+	padding: inherit;
+}
+.bottom-paragraphs {
+	display: flex;
+	justify-content: space-between;
+}
+footer {
+	padding: 30px 0;
+}
+span {
+	display: block;
+	line-height: 18px;
+}
+.copyright{
+	font-size: 13px;
+	margin: 50px 41%;
+}
+.services-header {
+	padding-top: 50px;
+}
